fix header height on mobile

--- a/frontend/src/components/Layout/Header/styles.scss
+++ b/frontend/src/components/Layout/Header/styles.scss
@@ -20,6 +20,9 @@
   gap: 1;
 }
 @media only screen and (max-width: 768px) {
+  header {
+    max-height: 70px;
+  }
   .branch {
     img {
       width: 50%;
